# chess-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
board/: board.cpp
board/include/: board.h
include/: Test.h  board.h  figure.h  user-interaction.h
src/: Test.cpp  board.cpp  figure.cpp  main.cpp
user-interaction/: user-interaction.cpp
user-interaction/include/: user-interaction.h
